# djantic

./: .bumpversion.cfg  .gitignore  404.html  README.md  djantic.sublime-project  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml  test  tox.ini
.github/workflows/: publish.yml  test.yml
djantic/: __init__.py  fields.py  main.py
docs/: index.md  usage.md
pydantic_django/: __init__.py  fields.py  main.py  types.py
scripts/: lint  publish  setup  test
search/: search_index.json
tests/: test_fields.py  test_files.py  test_main.py  test_multiple_level_relations.py  test_postgres.py  test_queries.py  test_relations.py  test_schemas.py
tests/testapp/: apps.py  fields.py  models.py  order.py  settings.py
tests/testapp/project/: settings.py  urls.py
usage/: index.html
