[tool.poetry]
name = "djantic"
version = "0.6.0"
description = "Pydantic models for Django"
authors = ["Jordan Eremieff <jordan@eremieff.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
Django = "~3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
setuptools = "^57.2.0"
twine = "^3.4.1"
wheel = "^0.36.2"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
codecov = "^2.1.11"
mkdocs = "^1.2.3"
mkdocs-material = "^7.1.10"
mkautodoc = "^0.1.0"
Pygments = "^2.9.0"
pymdown-extensions = "^8.2"
rich = "^10.6.0"
django-stubs = "^1.8.0"
pytest-django = "^4.4.0"
psycopg2 = "^2.9.1"
bump2version = "^1.0.1"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
